# cautious-guide

./: .gitignore  CONTRIBUTING.md  README.md  aios.py  install.sh  pyproject.toml  version.py
.github/workflows/: ci.yml
ai/: __init__.py  aura.py
ai/rules/: base_rules.json
aim/: __init__.py  aim.py
auth/: __init__.py  pin_auth.py
boot/: __init__.py  bootloader.py  service_loader.py
cc/: __init__.py  command_center.py  events.py
cc/panels/: __init__.py  aura_panel.py  builder_panel.py  comms_panel.py  events_panel.py  help_panel.py  home_panel.py  hub_panel.py  layers_panel.py  network_panel.py  projects_panel.py  providers_panel.py  remote_panel.py  repair_panel.py  services_panel.py  settings_panel.py  storage_panel.py  system_panel.py
comms/: __init__.py  base.py
config/: aios.cfg
hub/: __init__.py  device_profile.py  hub_state.py
kernel/: __init__.py  kal.py  memory.py  process.py
plugins/: plugin_manager.py  registry.json
plugins/installed/codepad/: main.py  manifest.json
plugins/installed/filebrowser/: main.py  manifest.json
plugins/installed/monitor/: main.py  manifest.json
plugins/installed/sshbridge/: main.py  manifest.json
projects/: __init__.py  registry.py
providers/: __init__.py  base.py
remote/: __init__.py  base.py
shell/: __init__.py  arrow.py  completer.py
shell/commands/: __init__.py  aios_cmds.py  build_cmds.py
tests/: conftest.py  test_aim.py  test_aura.py  test_auth.py  test_core.py  test_kal.py  test_plugin_manager.py  test_projects.py  test_utils_ansi.py
utils/: __init__.py  ansi.py  colors.py
(+2 files in other folders)
