[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aios"
version = "1.0.0"
description = "Autonomous Intelligence Operating System — Studio Hub Edition"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
# AIOS uses only the Python standard library for its core functionality.
dependencies = []

[project.optional-dependencies]
# Install llama-cpp-python to enable AURA LLM mode (set aura.mode = "llm" in config).
llm = ["llama-cpp-python"]

[project.scripts]
aios = "aios:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
